@@ -455,7 +455,9 @@ abstract class CActiveRecord extends CModel
 	 * following four constants: self::BELONGS_TO, self::HAS_ONE, self::HAS_MANY and self::MANY_MANY;
 	 * 'className' refers to the name of the active record class that the related object(s) is of;
 	 * and 'foreign_key' states the foreign key that relates the two kinds of active record.
-	 * Note, for composite foreign keys, they must be listed together, separated by commas;
+	 * Note, for composite foreign keys, they can be either listed together, separated by commas or specified as an array
+     * in format of array('key1','key2'). In case you need to specify custom PK->FK association you can define it as
+     * array('fk'=>'pk'). For composite keys it will be array('fk_c1'=>'pk_с1','fk_c2'=>'pk_c2').
 	 * and for foreign keys used in MANY_MANY relation, the joining table must be declared as well
 	 * (e.g. 'join_table(fk1, fk2)').
 	 *
@@ -1892,7 +1894,7 @@ class CBaseActiveRelation extends CComponent
 	 */
 	public $className;
 	/**
-	 * @var string the foreign key in this relation
+	 * @var mixed the foreign key in this relation
 	 */
 	public $foreignKey;
 	/**
