@@ -19,12 +19,14 @@ Version 1.1.9 work in progress
 - Chg: Upgraded JQuery UI to 1.8.16 (Sam Dark)
 - Chg: Upgraded jQuery to 1.6.4 (Sam Dark)
 - Chg: Reverted back the changes made to fix issue 2284 (Qiang)
+- Chg #2647: Fixed inconvenient way of defining through relation (creocoder, Sam Dark)
 - Enh #2029: Added scope support to Model::relations() (creocoder, Sam Dark)
 - Enh #2334: CHttpRequest::getPathInfo() now properly decodes both UTF-8 and ISO-8859-1 encoded URIs (Sam Dark)
 - Enh #2387: Numeric keys are now displayed in error/exception stacktrace call argument if array isn't 0..X indexed (Sam Dark)
 - Enh #2602: Better error handling in CHttpSession::open() when using PHP <5.3.0 (Sam Dark)
 - Enh #2604: CArrayDataProvider::keyField can now be set to false to use keys from $rawData array instead of a named keyField (creocoder, Sam Dark)
 - Enh #2637: Related table alias set dynamically in relational query is now available in the scopes of related model (creocoder, Sam Dark)
+- Enh #2646, #2706: Added ability to join on a specific keys (creocoder, Sam Dark)
 - Enh #2654: Enhanced CUrlManager::addRules() by allowing new rules to be inserted in front of the existing rules (Qiang)
 - Enh #2717: Extracted MigrateCommand::createMigrationHistoryTable method from MigrateCommand::getMigrationHistory (Sam Dark)
 - Enh #2751: Added removeOld parameter to yiic message command that allows not to add obsolete lines to translation file generated (luislobo, Sam Dark)
